--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -9,7 +9,7 @@
 
 .modal {
     width: 528px;
-    min-height: 581px;
+    height: 581px;
     background-color: var(--white-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 4px;
@@ -107,6 +107,7 @@
     height: 120px;
     padding: 12px 16px;
     resize: none;
+    display: block; 
 }
 
 .modal-lable-text {
