--- a/css/main.css
+++ b/css/main.css
@@ -88,7 +88,7 @@ body {
 
 .modal {
   width: 528px;
-  min-height: 581px;
+  height: 581px;
   background-color: var(--white-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 4px;
@@ -186,6 +186,7 @@ body {
   height: 120px;
   padding: 12px 16px;
   resize: none;
+  display: block;
 }
 
 .modal-lable-text {
@@ -597,10 +598,6 @@ body {
 
 .adress__address {
   font-style: inherit;
-}
-
-.addres__studio {
-  margin-bottom: 9px;
 }
 
 .address__item:not(:last-child) {
